Still need to fine tune button layout, button text, minor spacing issues, minor footer issues.  Home good enough to move on though.

--- a/css/index.css
+++ b/css/index.css
@@ -191,6 +191,7 @@ body {
 }
 .container .home .col-sm-4 {
   margin-top: 40px;
+  margin-bottom: 30px;
 }
 .container .home .col-sm-4 p {
   display: flex;
@@ -202,6 +203,7 @@ body {
   padding: 20px;
   height: 120px;
   margin-top: 30px;
+  margin-bottom: 20px;
 }
 .container .home h2 {
   font-size: 2.4rem;
@@ -213,7 +215,7 @@ body {
 .container .home button {
   width: 140px;
   height: 50px;
-  font-size: 1.4rem;
+  font-size: 1.6rem;
   background: #FFFFFF;
 }
 .jumbo-home {
@@ -249,7 +251,7 @@ body {
 .container .home .large-button1 {
   position: absolute;
   right: 75px;
-  margin-top: 220px;
+  margin-top: 210px;
   width: 310px;
   height: 90px;
   font-size: 2.5rem;
@@ -259,13 +261,51 @@ body {
 }
 .container .home .large-button2 {
   position: absolute;
-  margin-top: 220px;
+  margin-top: 190px;
   width: 310px;
   height: 90px;
   font-size: 2.5rem;
   z-index: 10;
   background: #dddcdc;
   border: 1px #222222;
+}
+.container .home .large-button3 {
+  position: absolute;
+  right: 105px;
+  margin-top: 190px;
+  width: 310px;
+  height: 90px;
+  font-size: 2.5rem;
+  z-index: 10;
+  background: #dddcdc;
+  border: 1px #222222;
+}
+.footer {
+  background: #828282;
+  margin-top: 40px;
+  padding: 10px;
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 2.6rem;
+  color: #FFFFFF;
+}
+.footer h3 {
+  font-size: 1.4rem;
+  font-weight: 700;
+}
+.footer .column {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  padding: 20px;
+  height: 200px;
+}
+.footer .row {
+  justify-content: space-evenly;
+}
+.footer .copyright {
+  vertical-align: center;
+  margin-left: 200px;
 }
 .services {
   background: green;
