--- a/less/home.less
+++ b/less/home.less
@@ -12,6 +12,7 @@
 
         .col-sm-4 {
             margin-top: 40px;
+            margin-bottom: 30px;
         }
 
         .col-sm-4 p {
@@ -24,6 +25,8 @@
             padding: 20px;
             height: 120px;
             margin-top: 30px;
+            margin-bottom: 20px;
+          
         }
         
         h2 {
@@ -38,7 +41,7 @@
         button {
             width: 140px;
             height: 50px;
-            font-size: 1.4rem;
+            font-size: 1.6rem;
             background: @white;
         }
 
@@ -82,7 +85,7 @@
 .container .home .large-button1 {
     position: absolute;
     right: 75px;
-    margin-top: 220px;
+    margin-top: 210px;
     width: 310px;
     height: 90px;
     font-size: 2.5rem;
@@ -93,7 +96,7 @@
 
 .container .home .large-button2 {
     position: absolute;
-    margin-top: 220px;
+    margin-top: 190px;
     width: 310px;
     height: 90px;
     font-size: 2.5rem;
@@ -102,4 +105,46 @@
     border: 1px #222222;
 }
 
+.container .home .large-button3 {
+    position: absolute;
+    right: 105px;
+    margin-top: 190px;
+    width: 310px;
+    height: 90px;
+    font-size: 2.5rem;
+    z-index: 10;
+    background: rgb(221, 220, 220);
+    border: 1px #222222;
+}
 
+.footer {
+    background: #828282;
+    margin-top: 40px;
+    padding: 10px;
+    font-weight: 400;
+    font-size: 1rem;
+    line-height: 2.6rem;
+    color: @white;
+
+    h3 {
+        font-size: 1.4rem;
+        font-weight: 700;
+    }
+
+    .column {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        padding: 20px;
+        height: 200px;
+    }
+
+    .row {
+        justify-content: space-evenly;
+    }
+
+    .copyright {
+        vertical-align: center;
+        margin-left: 200px;
+    }
+}
